Se creó con Colab

--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEY8l1/PKLSvQh0tdpM/jL",
+      "authorship_tag": "ABX9TyMgot8LJG7uHSYzUGhp5TK7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 2,
       "metadata": {
         "id": "ZXdeIjKZorvH"
       },
@@ -118,7 +118,11 @@
         "import seaborn as sns\n",
         "import numpy as np\n",
         "\n",
+        "\n",
         "# Importación de librerias para machine learning\n",
+        "from numpy import nan\n",
+        "from numpy import isnan\n",
+        "from pandas import read_csv\n",
         "from sklearn.datasets import load_breast_cancer\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -758,6 +762,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ANÁLISIS EXPLORATORIO DE DATOS (EDA)"
+      ],
+      "metadata": {
+        "id": "kVb1OmwbacDI"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Información sobre el tipo de datos de las columnas\n",
@@ -768,9 +781,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZUkbYayi06OW",
-        "outputId": "ada61234-3d9a-4dfb-fadb-4f1d3e2cb32c"
+        "outputId": "7d7fc313-945a-4d26-fcca-7f755c3a611c"
       },
-      "execution_count": 40,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -917,9 +930,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tk7fKV25qzs3",
-        "outputId": "5c36bae3-105d-4a83-d196-8250a490f93b"
+        "outputId": "51cac196-a841-45ab-b2ec-ea23e383ab1e"
       },
-      "execution_count": 61,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -942,7 +955,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 12
         }
       ]
     },
@@ -1053,9 +1066,9 @@
           "height": 206
         },
         "id": "3Pe5t9FJxjbo",
-        "outputId": "d25f78fa-5f5d-434a-a4fc-689f5612a598"
+        "outputId": "d5bf9f50-b8c9-4dac-ce9e-9a1f8f5def02"
       },
-      "execution_count": 22,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1084,7 +1097,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-56c7629f-012f-4da9-bd8e-2ce630e22a4d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-69084b59-48e2-49b8-8b39-c2c3bd2eb492\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1205,7 +1218,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-56c7629f-012f-4da9-bd8e-2ce630e22a4d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-69084b59-48e2-49b8-8b39-c2c3bd2eb492')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1257,12 +1270,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-56c7629f-012f-4da9-bd8e-2ce630e22a4d button.colab-df-convert');\n",
+              "        document.querySelector('#df-69084b59-48e2-49b8-8b39-c2c3bd2eb492 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-56c7629f-012f-4da9-bd8e-2ce630e22a4d');\n",
+              "        const element = document.querySelector('#df-69084b59-48e2-49b8-8b39-c2c3bd2eb492');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1282,8 +1295,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-1aef61b0-79bf-4d14-872d-ae59fa9c7e82\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1aef61b0-79bf-4d14-872d-ae59fa9c7e82')\"\n",
+              "<div id=\"df-f6f051f6-a5d2-493e-b351-e3645edbe3f4\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f6f051f6-a5d2-493e-b351-e3645edbe3f4')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1402,7 +1415,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-1aef61b0-79bf-4d14-872d-ae59fa9c7e82 button');\n",
+              "        document.querySelector('#df-f6f051f6-a5d2-493e-b351-e3645edbe3f4 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1419,7 +1432,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 13
         }
       ]
     },
@@ -4962,9 +4975,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from numpy import nan\n",
-        "from numpy import isnan\n",
-        "from pandas import read_csv\n",
+        "# Completamiento de los valores faltantes con la media de cada columna\n",
         "!pip install scikit-learn\n",
         "from sklearn.impute import SimpleImputer\n",
         "url='https://raw.githubusercontent.com/Carocschall/CoderHouse/main/WineQT.csv'\n",
@@ -4978,9 +4989,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3wl_ScdsBu2u",
-        "outputId": "8a3227c6-9d2e-4187-aabb-8fd99d249a0c"
+        "outputId": "83571c18-740b-4a69-bb9d-3f7d62ee2700"
       },
-      "execution_count": 28,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -5017,70 +5028,49 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# Crear un numpy array con los valores\n",
-        "valores = df.values\n",
-        "# definir el imputador\n",
-        "imputador = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
-        "# transformar el dataset\n",
-        "transformados = imputador.fit_transform(valores)\n",
-        "# Contar el numero de NaN en cada columna\n",
-        "print('Missing: ', isnan(valores).sum())"
+        "Observación\n",
+        "\n",
+        "Si bien el df no presenta datos faltantes como se evidencia al inicio de este trabajo, me pareció interesante ver las posibilidades de resolución, a modo de entrenamiento en este curso.\n"
       ],
       "metadata": {
-        "id": "LpOzBhTjmiSf"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "hMpYKp6cmLTi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# VISUALIZACIÓN DE DATOS"
+      ],
+      "metadata": {
+        "id": "EZU0QXOVcsrT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se busca analizar y comprender el comportamiento en la producción del vino, de las variables que intervienen en ella. Nos focalizaremos sobre la acidificación del vino y su vinculación o impacto en la calidad final del mismo.\n",
+        "\n",
+        "Para esto buscamos cruzar las variables de acidez fija, acidez volátil y ácido cítrico, así como también el nivel de acidez o alcalinidad del producto (PH). Por último, queremos indagar sobre la relación entre el nivel etílico y la calidad del vino, para conocer alguna relación directa o indirecta.\n",
+        "\n",
+        "Para esto, trabajaremos algunos instrumentos de visualización que faciliten la comprensión del comportamiento de las variables que afectan a la producción final del vino desde su calidad."
+      ],
+      "metadata": {
+        "id": "tA4NAje7c6H0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "8f5RT4OCeaPa"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "transformados=pd.DataFrame(transformados)\n",
-        "#transformados= transformados.rename(columns={0: \"AF\", 1: \"AV\", 2: \"AC\",3:\"AR\",4:\"CL\",5:\"DSL\",6:\"DST\",7:\"DEN\",8:\"PH\",9:\"SUL\",10:\"ALC\",11:\"CAL\",12:\"ID\"})\n",
-        "print(transformados.head().round(2))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PlQrX7Femrvz",
-        "outputId": "8d6c8916-aed1-4566-bcdb-280d943f6155"
-      },
-      "execution_count": 75,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "              0                 1            2               3          4   \\\n",
-            "0  fixed acidity  volatile acidity  citric acid  residual sugar  chlorides   \n",
-            "1            7.4               0.7          0.0             1.9      0.076   \n",
-            "2            7.8              0.88          0.0             2.6      0.098   \n",
-            "3            7.8              0.76         0.04             2.3      0.092   \n",
-            "4           11.2              0.28         0.56             1.9      0.075   \n",
-            "\n",
-            "                    5                     6        7     8          9   \\\n",
-            "0  free sulfur dioxide  total sulfur dioxide  density    pH  sulphates   \n",
-            "1                 11.0                  34.0   0.9978  3.51       0.56   \n",
-            "2                 25.0                  67.0   0.9968   3.2       0.68   \n",
-            "3                 15.0                  54.0    0.997  3.26       0.65   \n",
-            "4                 17.0                  60.0    0.998  3.16       0.58   \n",
-            "\n",
-            "        10       11  12  \n",
-            "0  alcohol  quality  Id  \n",
-            "1      9.4        5   0  \n",
-            "2      9.8        5   1  \n",
-            "3      9.8        5   2  \n",
-            "4      9.8        6   3  \n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# Uso del estilo seaborn en Matplotlib\n",
         "mpl.style.use('seaborn')"
       ],
       "metadata": {
