Se creó con Colab

--- a/TF.ipynb
+++ b/TF.ipynb
@@ -5082,36 +5082,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "ZHNLRERKF7hq"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
-        "# VISUALIZACIÓN DE DATOS"
-      ],
-      "metadata": {
-        "id": "JDmxl04fFufQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Se busca analizar y comprender el comportamiento en la producción del vino, de las variables que intervienen en ella. Nos focalizaremos sobre la acidificación del vino y su vinculación o impacto en la calidad final del mismo.\n",
-        "\n",
-        "Para esto buscamos cruzar las variables de acidez fija, acidez volátil y ácido cítrico, así como también el nivel de acidez o alcalinidad del producto (PH). Por último, queremos indagar sobre la relación entre el nivel etílico y la calidad del vino, para conocer alguna relación directa o indirecta.\n",
-        "\n",
-        "Para esto, trabajaremos algunos instrumentos de visualización que faciliten la comprensión del comportamiento de las variables que afectan a la producción final del vino desde su calidad."
-      ],
-      "metadata": {
-        "id": "Ovl4_KA7F6wZ"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# Uso del estilo seaborn en Matplotlib\n",
@@ -5729,10 +5699,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Visualización gráfica de datos"
+        "# VISUALIZACIÓN GRÁFICA DE DATOS"
       ],
       "metadata": {
         "id": "xXv47wBXIARg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se busca analizar y comprender el comportamiento en la producción del vino, de las variables que intervienen en ella. Nos focalizaremos sobre la acidificación del vino y su vinculación o impacto en la calidad final del mismo.\n",
+        "\n",
+        "Para esto buscamos cruzar las variables de acidez fija, acidez volátil y ácido cítrico, así como también el nivel de acidez o alcalinidad del producto (PH). Por último, queremos indagar sobre la relación entre el nivel etílico y la calidad del vino, para conocer alguna relación directa o indirecta.\n",
+        "\n",
+        "Para esto, trabajaremos algunos instrumentos de visualización que faciliten la comprensión del comportamiento de las variables que afectan a la producción final del vino desde su calidad."
+      ],
+      "metadata": {
+        "id": "feYXDqvyMJWD"
       }
     },
     {
@@ -6249,7 +6232,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBDU+vfYjQ4FROeGNWv9DS",
+      "authorship_tag": "ABX9TyPaXWp+v/jAqqvH0aR6dEvV",
       "include_colab_link": true
     },
     "kernelspec": {
