Se creó con Colab

--- a/TF.ipynb
+++ b/TF.ipynb
@@ -5082,6 +5082,28 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# VISUALIZACIÓN GRÁFICA DE DATOS\n"
+      ],
+      "metadata": {
+        "id": "__qaiR8xMkt9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se busca analizar y comprender el comportamiento en la producción del vino, de las variables que intervienen en ella. Nos focalizaremos sobre la acidificación del vino y su vinculación o impacto en la calidad final del mismo.\n",
+        "\n",
+        "Para esto buscamos cruzar las variables de acidez fija, acidez volátil y ácido cítrico, así como también el nivel de acidez o alcalinidad del producto (PH). Por último, queremos indagar sobre la relación entre el nivel etílico y la calidad del vino, para conocer alguna relación directa o indirecta.\n",
+        "\n",
+        "Para esto, trabajaremos algunos instrumentos de visualización que faciliten la comprensión del comportamiento de las variables que afectan a la producción final del vino desde su calidad."
+      ],
+      "metadata": {
+        "id": "wOB6HesqMmXO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Uso del estilo seaborn en Matplotlib\n",
@@ -5697,28 +5719,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# VISUALIZACIÓN GRÁFICA DE DATOS"
-      ],
-      "metadata": {
-        "id": "xXv47wBXIARg"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Se busca analizar y comprender el comportamiento en la producción del vino, de las variables que intervienen en ella. Nos focalizaremos sobre la acidificación del vino y su vinculación o impacto en la calidad final del mismo.\n",
-        "\n",
-        "Para esto buscamos cruzar las variables de acidez fija, acidez volátil y ácido cítrico, así como también el nivel de acidez o alcalinidad del producto (PH). Por último, queremos indagar sobre la relación entre el nivel etílico y la calidad del vino, para conocer alguna relación directa o indirecta.\n",
-        "\n",
-        "Para esto, trabajaremos algunos instrumentos de visualización que faciliten la comprensión del comportamiento de las variables que afectan a la producción final del vino desde su calidad."
-      ],
-      "metadata": {
-        "id": "feYXDqvyMJWD"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "print(plt.style.available)"
@@ -6232,7 +6232,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaXWp+v/jAqqvH0aR6dEvV",
+      "authorship_tag": "ABX9TyOJlM4unJcrNfEZcLqeYAeN",
       "include_colab_link": true
     },
     "kernelspec": {
