Se creó con Colab

--- a/TF.ipynb
+++ b/TF.ipynb
@@ -5129,6 +5129,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Cruce de variables independientes a partir de la dependiente (Calidad)"
+      ],
+      "metadata": {
+        "id": "dQ9VekyINCHk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Indexación de la columna 'quality' en el DataFrame\n",
@@ -6232,7 +6241,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJlM4unJcrNfEZcLqeYAeN",
+      "authorship_tag": "ABX9TyO0N/HphAd9aNYS/SxLjgep",
       "include_colab_link": true
     },
     "kernelspec": {
