Se creó con Colab

--- a/TF.ipynb
+++ b/TF.ipynb
@@ -102,13 +102,9 @@
         "from numpy import nan\n",
         "from numpy import isnan\n",
         "from pandas import read_csv\n",
-        "from sklearn.datasets import load_breast_cancer\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
-        "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.svm import SVC\n",
         "from scipy.special import jv\n",
@@ -120,12 +116,14 @@
         "from sklearn import tree\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.metrics import accuracy_score, classification_report\n",
-        "from sklearn.model_selection import train_test_split"
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+        "from sklearn.tree import plot_tree"
       ],
       "metadata": {
         "id": "rImY73yldZf_"
       },
-      "execution_count": 22,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -5750,119 +5748,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
-        "\n",
-        "# Cargar el archivo CSV\n",
-        "url = 'https://raw.githubusercontent.com/Carocschall/CoderHouse/main/WineQT.csv'\n",
-        "df = pd.read_csv(url)\n",
-        "\n",
-        "# Ver las primeras filas del dataframe\n",
-        "print(df.head())\n",
-        "\n",
-        "# Dividir los datos en características (X) y etiqueta (y)\n",
-        "X = df.drop('quality', axis=1)\n",
-        "y = df['quality']\n",
-        "\n",
-        "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-        "\n",
-        "# Crear el modelo de árbol de decisión\n",
-        "clf = DecisionTreeClassifier(random_state=42)\n",
-        "\n",
-        "# Entrenar el modelo\n",
-        "clf.fit(X_train, y_train)\n",
-        "\n",
-        "# Hacer predicciones sobre el conjunto de prueba\n",
-        "y_pred = clf.predict(X_test)\n",
-        "\n",
-        "# Evaluar el modelo\n",
-        "accuracy = accuracy_score(y_test, y_pred)\n",
-        "report = classification_report(y_test, y_pred)\n",
-        "conf_matrix = confusion_matrix(y_test, y_pred)\n",
-        "\n",
-        "print(f'Accuracy: {accuracy}')\n",
-        "print('Classification Report:')\n",
-        "print(report)\n",
-        "print('Confusion Matrix:')\n",
-        "print(conf_matrix)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FGK--F9X1HEM",
-        "outputId": "b510d4bf-28b2-4173-c777-5d589f23432a"
-      },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
-            "0            7.4              0.70         0.00             1.9      0.076   \n",
-            "1            7.8              0.88         0.00             2.6      0.098   \n",
-            "2            7.8              0.76         0.04             2.3      0.092   \n",
-            "3           11.2              0.28         0.56             1.9      0.075   \n",
-            "4            7.4              0.70         0.00             1.9      0.076   \n",
-            "\n",
-            "   free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
-            "0                 11.0                  34.0   0.9978  3.51       0.56   \n",
-            "1                 25.0                  67.0   0.9968  3.20       0.68   \n",
-            "2                 15.0                  54.0   0.9970  3.26       0.65   \n",
-            "3                 17.0                  60.0   0.9980  3.16       0.58   \n",
-            "4                 11.0                  34.0   0.9978  3.51       0.56   \n",
-            "\n",
-            "   alcohol  quality  Id  \n",
-            "0      9.4        5   0  \n",
-            "1      9.8        5   1  \n",
-            "2      9.8        5   2  \n",
-            "3      9.8        6   3  \n",
-            "4      9.4        5   4  \n",
-            "Accuracy: 0.5633187772925764\n",
-            "Classification Report:\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           3       0.00      0.00      0.00         0\n",
-            "           4       0.33      0.33      0.33         6\n",
-            "           5       0.65      0.66      0.65        96\n",
-            "           6       0.56      0.45      0.50        99\n",
-            "           7       0.45      0.69      0.55        26\n",
-            "           8       0.33      0.50      0.40         2\n",
-            "\n",
-            "    accuracy                           0.56       229\n",
-            "   macro avg       0.39      0.44      0.41       229\n",
-            "weighted avg       0.58      0.56      0.56       229\n",
-            "\n",
-            "Confusion Matrix:\n",
-            "[[ 0  0  0  0  0  0]\n",
-            " [ 0  2  2  1  1  0]\n",
-            " [ 0  3 63 27  3  0]\n",
-            " [ 2  1 32 45 17  2]\n",
-            " [ 0  0  0  8 18  0]\n",
-            " [ 0  0  0  0  1  1]]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, msg_start, len(result))\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, msg_start, len(result))\n",
-            "/usr/local/lib/python3.10/dist-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-            "  _warn_prf(average, modifier, msg_start, len(result))\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "Este código utiliza la biblioteca scikit-learn para cargar los datos desde el archivo CSV, dividir los datos en conjuntos de entrenamiento y prueba, crear un clasificador de árbol de decisión, entrenar el modelo, predecir en el conjunto de prueba, calcular la precisión del modelo y mostrar la matriz de confusión. Finalmente, visualiza el árbol de decisión generado."
@@ -5874,46 +5759,37 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-        "from sklearn.tree import plot_tree\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
         "# Cargar los datos desde el archivo CSV\n",
         "url = \"https://raw.githubusercontent.com/Carocschall/CoderHouse/main/WineQT.csv\"\n",
         "data = pd.read_csv(url)\n",
-        "\n",
-        "# Verificar los primeros registros para entender la estructura de los datos\n",
         "print(data.head())\n",
         "\n",
-        "# Separar las características (X) y la variable objetivo (y)\n",
+        "# Características (X) y la variable objetivo (y)\n",
         "X = data.drop('quality', axis=1)\n",
         "y = data['quality']\n",
         "\n",
-        "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
+        "# División de los datos en conjuntos de entrenamiento y prueba\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=60)\n",
         "\n",
-        "# Crear el clasificador de árbol de decisión\n",
+        "# Creación el clasificador de árbol de decisión\n",
         "clf = DecisionTreeClassifier(random_state=42)\n",
         "\n",
         "# Entrenar el modelo\n",
         "clf.fit(X_train, y_train)\n",
         "\n",
-        "# Predecir en el conjunto de prueba\n",
+        "# Predicción del conjunto de prueba\n",
         "y_pred = clf.predict(X_test)\n",
         "\n",
-        "# Calcular la precisión del modelo\n",
+        "# Cálculo de la precisión del modelo\n",
         "accuracy = accuracy_score(y_test, y_pred)\n",
         "print(\"Precisión del modelo:\", accuracy)\n",
         "\n",
-        "# Mostrar la matriz de confusión\n",
+        "# Matriz de confusión\n",
         "conf_matrix = confusion_matrix(y_test, y_pred)\n",
         "print(\"Matriz de confusión:\")\n",
         "print(conf_matrix)\n",
         "\n",
-        "# Visualizar el árbol de decisión\n",
+        "# Visualización el árbol de decisión\n",
         "plt.figure(figsize=(15,10))\n",
         "plot_tree(clf, filled=True, feature_names=X.columns, class_names=['3','4','5','6','7','8'])\n",
         "plt.show()\n"
@@ -6018,7 +5894,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOzuhXtyBt34obAd1fyjwHn",
+      "authorship_tag": "ABX9TyOmHTRdFCxnsciHwKBGDbVH",
       "include_colab_link": true
     },
     "kernelspec": {
