--- a/TF.ipynb
+++ b/TF.ipynb
@@ -118,12 +118,13 @@
         "from sklearn.metrics import accuracy_score, classification_report\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import accuracy_score, confusion_matrix\n",
-        "from sklearn.tree import plot_tree"
+        "from sklearn.tree import plot_tree\n",
+        "from sklearn.svm import SVC"
       ],
       "metadata": {
         "id": "rImY73yldZf_"
       },
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -5882,6 +5883,159 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "# Cargar los datos desde el archivo CSV\n",
+        "url = \"https://raw.githubusercontent.com/Carocschall/CoderHouse/main/WineQT.csv\"\n",
+        "df = pd.read_csv(url)\n",
+        "\n",
+        "# Separar las características (X) y la variable objetivo (y)\n",
+        "X = df.drop('quality', axis=1)\n",
+        "y = df['quality']\n",
+        "\n",
+        "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Escalar los datos\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_test_scaled = scaler.transform(X_test)\n",
+        "\n",
+        "# Crear y entrenar el modelo SVM\n",
+        "svm = SVC()\n",
+        "svm.fit(X_train_scaled, y_train)\n",
+        "\n",
+        "# Calcular la precisión del modelo\n",
+        "acc = svm.score(X_test_scaled, y_test)\n",
+        "print(\"Precisión del modelo SVM:\", acc)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pNJwEALbPRnk",
+        "outputId": "7a060a5b-4fb0-48f1-ff82-e802d31b8485"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Precisión del modelo SVM: 0.6550218340611353\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('accuracy =', round(acc * 100, 2), '%')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NyydEXFzQN6P",
+        "outputId": "62eb1eff-6354-464d-a06f-c6f9c8d1030b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "accuracy = 65.5 %\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "# Cargar los datos desde el archivo CSV\n",
+        "url = \"https://raw.githubusercontent.com/Carocschall/CoderHouse/main/WineQT.csv\"\n",
+        "df = pd.read_csv(url)\n",
+        "\n",
+        "# Separar las características (X) y la variable objetivo (y)\n",
+        "X = df.drop('quality', axis=1)\n",
+        "y = df['quality']\n",
+        "\n",
+        "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Escalar los datos\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_test_scaled = scaler.transform(X_test)\n",
+        "\n",
+        "# Definir el valor de k y crear el clasificador KNN\n",
+        "k = 5\n",
+        "knn = KNeighborsClassifier(n_neighbors=k)\n",
+        "\n",
+        "# Entrenar el modelo KNN\n",
+        "knn.fit(X_train_scaled, y_train)\n",
+        "\n",
+        "# Predecir en el conjunto de prueba\n",
+        "y_pred = knn.predict(X_test_scaled)\n",
+        "\n",
+        "# Calcular la precisión del modelo\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "print(\"Precisión del modelo KNN:\", accuracy)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zWJSxpgQQz59",
+        "outputId": "99d24992-6346-4203-ee6c-2ef20983a97b"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Precisión del modelo KNN: 0.5589519650655022\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Accuracy: {:.2f}%'.format(accuracy * 100))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6cvulVpYQ9bY",
+        "outputId": "7a4ecaa1-ab9d-4f8d-d6b9-2f3c7d9eda45"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 55.90%\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "# CONCLUSIONES Y RECOMENDACIONES"
@@ -5903,7 +6057,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNlvQKZoTX9GgqZejsDl+Tk",
+      "authorship_tag": "ABX9TyPT1pnWsfgwUMXAtixdDqzV",
       "include_colab_link": true
     },
     "kernelspec": {
