Se creó con Colab

--- a/TF.ipynb
+++ b/TF.ipynb
@@ -5232,8 +5232,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "***Gráfico de Acidez fija y calidad***"
+      ],
+      "metadata": {
+        "id": "hzoDD7REXusu"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Graficación del cruce de variables de acidez fija y calidad del vino\n",
         "fig, ax = plt.subplots(figsize=(12, 4))\n",
         "ax.plot(x, y, label='quality')\n",
         "ax.set_xlabel('fixed acidity (g/l)')\n",
@@ -5933,6 +5943,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "En resumen, este código carga un conjunto de datos de vinos, divide los datos en conjuntos de entrenamiento y prueba, escala las características, entrena un modelo SVM y evalúa su precisión en los datos de prueba."
+      ],
+      "metadata": {
+        "id": "C81s85QLXHY9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "print('accuracy =', round(acc * 100, 2), '%')"
@@ -6038,6 +6057,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Este código primero carga el conjunto de datos desde la URL proporcionada, luego divide los datos en conjuntos de entrenamiento y prueba, escala las características para asegurarse de que estén en la misma escala, inicializa y entrena un modelo de regresión logística, y finalmente calcula la precisión del modelo en los datos de prueba."
+      ],
+      "metadata": {
+        "id": "UsPsxMRgWyiL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# CONCLUSIONES Y RECOMENDACIONES"
       ],
       "metadata": {
@@ -6057,7 +6085,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPT1pnWsfgwUMXAtixdDqzV",
+      "authorship_tag": "ABX9TyO+ASZaA99qg/zpILD7M1NG",
       "include_colab_link": true
     },
     "kernelspec": {
